KAAV-478 Fieldset unable to save error toastr and styles for cannot save toastr modifications. Checkbox clickbox too small bug fix.

--- a/src/components/input/Input.scss
+++ b/src/components/input/Input.scss
@@ -459,6 +459,18 @@
 }
 .checkbox {
   display: flex;
+  .checkbox-item {
+    input{
+      z-index: 2000;
+      position: relative;
+    }
+    label:first-of-type{
+      padding-left: 10px;
+    }
+    label{
+      position: unset;
+    }
+  }
 }
 .checkbox-item {
   margin-top: 0 !important;
